--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
             <version>0.1.53</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
 
